# addon/flamenco/manager/model/job.py
@@ -104,6 +104,7 @@ class Job(ModelComposed):
             'updated': (datetime,),  # noqa: E501
             'status': (JobStatus,),  # noqa: E501
             'activity': (str,),  # noqa: E501
+            'type_etag': (str,),  # noqa: E501
             'settings': (JobSettings,),  # noqa: E501
             'metadata': (JobMetadata,),  # noqa: E501
         }
@@ -123,6 +124,7 @@ class Job(ModelComposed):
         'updated': 'updated',  # noqa: E501
         'status': 'status',  # noqa: E501
         'activity': 'activity',  # noqa: E501
+        'type_etag': 'type_etag',  # noqa: E501
         'settings': 'settings',  # noqa: E501
         'metadata': 'metadata',  # noqa: E501
     }
@@ -175,6 +177,7 @@ class Job(ModelComposed):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
+            type_etag (str): Hash of the job type, copied from the `AvailableJobType.etag` property of the job type. The job will be rejected if this field doesn't match the actual job type on the Manager. This prevents job submission with old settings, after the job compiler script has been updated. If this field is ommitted, the check is bypassed. . [optional]  # noqa: E501
             settings (JobSettings): [optional]  # noqa: E501
             metadata (JobMetadata): [optional]  # noqa: E501
         """
@@ -286,6 +289,7 @@ class Job(ModelComposed):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
+            type_etag (str): Hash of the job type, copied from the `AvailableJobType.etag` property of the job type. The job will be rejected if this field doesn't match the actual job type on the Manager. This prevents job submission with old settings, after the job compiler script has been updated. If this field is ommitted, the check is bypassed. . [optional]  # noqa: E501
             settings (JobSettings): [optional]  # noqa: E501
             metadata (JobMetadata): [optional]  # noqa: E501
         """
